Version 1.1.4+svn:
 * WML engine
   * all [event] tags shall perform complex substitution
 * language and i18n:
   * updated translations: Czech, Finnish, Hungarian, Italian, Latin,
     Norwegian, Portuguese (Brazil), Spanish, Swedish
 * campaigns
   * Tutorial
     * the hero icon is explained
   * Heir to the Throne
     * not being able to recruit gryphons is further explained in Northern
       Winter
     * made Dwarven Doors entrance accessible to mountedfoot
   * The Rise of Wesnoth
     * gave hero icons to unkillable heroes (possibly missing some)
     * fixed lack of death objective for Lord Typhon in A Final Spring (#6108)
 * multiplayer maps:
   * config file update: Sulla's Ruins
   * revised multiplayer maps: Charge, Meteor Lake, King of the Hill, Loris
     River, Paths of Daggers, Siege Castles, Waterloo Sunset
 * units
   * balancing changes:
     * Increased HP of the Footpad from 28 to 30
     * Increased melee and ranged damage of the Footpad from 4-2 to 5-2
     * Increased HP of the Outlaw from 40 to 42
     * Increased melee damage of the Outlaw from 7-2 to 8-2
     * Added marksmanship to the Drake Glider branch
     * Hurrican and Sky Drakes now have same defense and movement costs on
       fungus and in caves like other drakes.
 * music & sound
   * new or improved sounds: holy magic, thorns, pincers
 * miscellaneous
   * added a generic scenario music macro and table of contents to utils.cfg
   * added an advanced preference to disable mouse scrolling
   * --no-delay and --exit-at-end options added for benchmarking
 * graphics
   * new attack animations: Curse, Drake Claws, Human Crossbow, Human Throwing
     Dagger, Ink, Orcish Bow, Orcish Crossbow, Orcish Spear, Slam, Tentacle,
     Thunderstick, Undead Dagger, Waterspray, Web

Version 1.1.4:
 * language and i18n:
   * updated translations: Czech, German, Slovak
 * help menu
   * It is now possible to specify generated topic sorting by title separate