@@ -3,6 +3,7 @@
 #macro to define AMLA adding HP
 #define AMLA_TOUGH HP_ADVANCE
 [advancement]
+strict_amla=yes
 max_times=100
 id=tough_{HP_ADVANCE}
 description= _ "Max HP bonus +" {HP_ADVANCE} _", MAX XP +25%"
@@ -23,6 +24,7 @@ increase=25%
 #macro to define AMLA full healing
 #define AMLA_NECROHEAL
 [advancement]
+strict_amla=yes
 max_times=100
 id=necroheal
 description= _ "Full Heal"
